# sennaar

./: .editorconfig  .gitignore  LICENSE  README.md  flake.nix  sennaar.schema.json
.github/workflows/: rust.yml
docs/: GENERATIVE_AI.md  ROADMAP.md
rossetta-cxx/: .gitignore  CMakeLists.txt
rossetta-cxx/include/sennaar/: expr.def  registry.def
sennaar-kt/: pom.xml
sennaar-kt/src/main/kotlin/: Identifier.kt
sennaar-kt/src/main/kotlin/cpl/: expr.kt
sennaar-kt/src/main/kotlin/registry/: entity.kt  metadata.kt  platform.kt  rawtype.kt  registry.kt
sennaar-rs/: .gitignore  Cargo.toml  generate-schema.sh
sennaar-rs/src/: cthulhu.rs  diag.rs  ident.rs  lib.rs  loc.rs  macross.rs
sennaar-rs/src/cpl/: adapter.rs  clang_expr.rs  clang_ty.rs  clang_utils.rs  decl.rs  expr.rs  mod.rs  ty.rs
sennaar-rs/src/panspace/: lalr.lalrpop  mcr.rs  mod.rs  pctx.rs  tok.rs
sennaar-rs/src/registry/: entity.rs  entity_macross.rs  lalr.lalrpop  metadata.rs  mod.rs  platform.rs  rawtype.rs  registry.rs  registry_macross.rs
sennaar-rs/src/rossetta/: clang_ctx.rs  clang_decl.rs  clang_expr.rs  clang_ty.rs  clang_utils.rs  mod.rs  name_unnamed.rs  to_registry.rs
sennaar-rs/tests/: prelude.rs  test_adapter.rs  test_map_decl.rs  test_registry.rs
sennaar-rs/tests/resources/: sample.c  test_map_decl.c  test_registry.c
