[package]
name = "sennaar"
version = "0.1.0"
edition = "2024"

[build-dependencies]
lalrpop = "0.22.2"

[dependencies]
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }

# If cargo fails to up, try set LIBCLANG_PATH to the directory with libclang.so, or see
# https://github.com/KyleMayes/clang-sys?tab=readme-ov-file#environment-variables
clang-sys = { version = "1.8.1", features = ["clang_17_0"] }

[[bin]]
name = "generate_schema"
path = "bin/generate_schema.rs"
